added Proprty Table and Rental Page

--- a/RecordKeepingApp.csproj
+++ b/RecordKeepingApp.csproj
@@ -65,7 +65,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <MauiXaml Update="secondPage.xaml">
+	  <MauiXaml Update="RentalsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
