created InsertPayment Page and ViewModel

--- a/RecordKeepingApp.csproj
+++ b/RecordKeepingApp.csproj
@@ -82,6 +82,9 @@
 	  <MauiXaml Update="Views\InsertPaymentPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\InsertPropertyPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\PropertyDetailsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
